// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConfigCacheTestCases compiletime exports-presence exports-presence should compile: errors 1`] = `
Array [
  Object {
    "loc": "2:0-34",
    "message": "export 'NotHere' (reexported as 'NotHere') was not found in '../stub' (possible exports: default)",
    "moduleName": "./ccc/index.js",
  },
  Object {
    "loc": "4:25-29",
    "message": "export 'NoNo' (imported as 'NoNo') was not found in '../stub' (possible exports: default)",
    "moduleName": "./ccc/index.js",
  },
]
`;

exports[`ConfigCacheTestCases compiletime exports-presence exports-presence should compile: warnings 1`] = `
Array [
  Object {
    "loc": "2:0-34",
    "message": "export 'NotHere' (reexported as 'NotHere') was not found in '../stub' (possible exports: default)",
    "moduleName": "./bbb/index.js",
  },
  Object {
    "loc": "4:25-29",
    "message": "export 'NoNo' (imported as 'NoNo') was not found in '../stub' (possible exports: default)",
    "moduleName": "./bbb/index.js",
  },
  Object {
    "loc": "4:25-29",
    "message": "export 'NoNo' (imported as 'NoNo') was not found in '../stub' (possible exports: default)",
    "moduleName": "./ddd/index.js",
  },
  Object {
    "loc": "31:6-10",
    "message": "export 'a' (imported as 'ns') was not found in './stub' (possible exports: default)",
    "moduleName": "./module.js",
  },
  Object {
    "loc": "58:6-10",
    "message": "export 'a' (imported as 'ns') was not found in './stub' (possible exports: default)",
    "moduleName": "./module.js",
  },
  Object {
    "loc": "61:15-19",
    "message": "export 'a' (imported as 'ns') was not found in './stub' (possible exports: default)",
    "moduleName": "./module.js",
  },
  Object {
    "loc": "64:6-10",
    "message": "export 'a' (imported as 'ns') was not found in './stub' (possible exports: default)",
    "moduleName": "./module.js",
  },
  Object {
    "loc": "67:15-19",
    "message": "export 'a' (imported as 'ns') was not found in './stub' (possible exports: default)",
    "moduleName": "./module.js",
  },
]
`;
